--- a/assumeTicket.html
+++ b/assumeTicket.html
@@ -52,28 +52,60 @@
             min-height: 200px;
         }
         #ticket_main_info {
-            min-height: 500px;
+            min-height: 300px;
             border: 1px solid blue;
             border-radius: 15px;
             background-color: white;
             margin: 20px;
-            padding: 20px;
+            padding: 5px;
             display: block;
         }
-        #ticket_main_info p {
-            width: 145px;
-            float: left;
-        }
-        .ticket_main_info_from_to {
-            min-height: 50px;
-        }
         .ticket_main_info_road {
-            min-height: 350px;
+            min-height: 300px;
             display: block;
             padding: 0;
         }
         .row {
             min-height:40px;
+        }
+        .container {
+            font-size: 15px;
+            padding: 5px;
+        }
+        #assume {
+            padding-left: 20px;
+        }
+        #assume p {
+            margin: 0;
+            padding: 0;
+        }
+        #assume_text {
+            font-weight: bold;
+            font-size: 22px;
+        }
+        .form-check-input {
+            width: 18px;
+            height: 18px;
+        }
+        #ticket_pay_method {
+            min-height: 100px;
+            border: 1px solid blue;
+            border-radius: 15px;
+            background-color: white;
+            margin: 20px;
+            display: block;
+        }
+        #ticket_pay_method p {
+            margin-left: 40px;
+            font-weight: bold;
+            font-size: 22px;
+            margin-bottom: 10px;
+        }
+        #train_info_assume p {
+            font-weight: bold;
+            font-size: 20px;
+            padding-bottom: 0px;
+            margin-bottom: 3px;
         }
 
 
@@ -117,114 +149,62 @@
         <p>26 Oct 2020  10:00 - 11:27</p>
     </div>
 </nav>
+<div id="assume">
+    <p><small>Sprawdź czy wszystko sie zgadza</small></p>
+    <p id="assume_text">Podsumowanie</p>
+</div>
 <div id="ticket_main_info" class="align-self-center">
-    <div class="ticket_main_info_from_to">
-        <p class="font-weight-bold">Kraków Główny</p>
-        <p class="text-right">Odjazd: <strong>10:00</strong></p>
-    </div>
     <div class="ticket_main_info_road container">
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                    <circle cx="8" cy="8" r="8"/>
-                </svg>
-                Kraków Główny
+        <div id="train_info_assume" >
+            <small>Połączenie:</small>
+            <p >Kraków Główny -> Katowice</p>
+            <p>26 Oct 2021</p>
+            <div class="row">
+                <div class="col">
+                    <small>Odjazd</small>
+                    <p>10:00</p>
+                    <small>Peron 8 Tor 3</small>
+                </div>
+                <div class="col">
+                    <small>Numer pociągu</small>
+                    PR 34802
+                </div>
+                <div class="col">
+                    <small>Przyjazd</small>
+                    <p>11:27</p>
+                    <small>Peron 3 Tor 8</small>
+                </div>
             </div>
-            <div class="col">
-                Inne
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Kraków Bronowice
-            </div>
-            <div class="col">
 
+            <div id="user_info_assume">
+                <small>Pasażer</small>
+                <p>Marek Nowak</p>
+                51% student
+                PRZEJAZD TAM
             </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Zabierzów
-            </div>
-            <div class="col">
 
+            <div id="assume_price" class="float-right">
+                <small>Cena biletu</small>
+                <p>6,37 PLN</p>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Krzeszowice
-            </div>
-            <div class="col">
 
-            </div>
         </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Trzebinia
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Jaworzno
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Mysłowice
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Katowice
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-
     </div>
-    <div class="ticket_main_info_from_to">
-        <p class="font-weight-bold">Katowice</p>
-        <p class="text-right">Przyjazd: <strong>11:27</strong></p>
-    </div>
+</div>
+
+<div id="ticket_pay_method" class="align-self-center">
+    <p><small>Wybierz metodę płatności</small></p>
+    <p><input class="form-check-input" type="radio" value="">
+        Płatność kartą</p>
+    <p><input class="form-check-input" type="radio" value="">
+        BLIK</p>
 </div>
 
 <div id="icons_bottom" class="d-flex justify-content-around">
     <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="blue" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
         <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
     </svg>
-    <a href="#" class="btn btn-primary btn-lg active" role="button" >Śledź</a>
-    <a href="#" class="btn btn-primary btn-lg active" role="button" >Kup bilet</a>
+    <a href="#" class="btn btn-primary btn-lg active" role="button" >Dalej</a>
 </div>
 
 <script>
