--- a/chooseOffer.html
+++ b/chooseOffer.html
@@ -52,7 +52,7 @@
             min-height: 200px;
         }
         #ticket_main_info {
-            min-height: 500px;
+            min-height: 400px;
             border: 1px solid blue;
             border-radius: 15px;
             background-color: white;
@@ -74,6 +74,25 @@
         }
         .row {
             min-height:40px;
+        }
+        .container {
+            font-size: 15px;
+            padding: 5px;
+        }
+        .form-check-input {
+            width: 17px;
+            height: 17px;
+        }
+        #choose_offer {
+            padding-left: 20px;
+        }
+        #choose_offer p {
+            margin: 0;
+            padding: 0;
+        }
+        #choose_offer_text {
+            font-weight: bold;
+            font-size: 22px;
         }
 
 
@@ -117,114 +136,50 @@
         <p>26 Oct 2020  10:00 - 11:27</p>
     </div>
 </nav>
+<div id="choose_offer">
+    <p><small>Tyle do wyboru</small></p>
+    <p id="choose_offer_text">Wybierz ofertę</p>
+</div>
 <div id="ticket_main_info" class="align-self-center">
-    <div class="ticket_main_info_from_to">
-        <p class="font-weight-bold">Kraków Główny</p>
-        <p class="text-right">Odjazd: <strong>10:00</strong></p>
-    </div>
     <div class="ticket_main_info_road container">
         <div class="row">
             <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                    <circle cx="8" cy="8" r="8"/>
-                </svg>
-                Kraków Główny
+                <input class="form-check-input" type="radio" value="">
+                PRZEJAZD TAM
             </div>
             <div class="col">
-                Inne
+                6.37 PLN
             </div>
         </div>
         <div class="row">
             <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Kraków Bronowice
+                <input class="form-check-input" type="radio" value="">
+                PRZEJAZD TAM/POWRÓT
             </div>
             <div class="col">
-
+                12.74 PLN
             </div>
         </div>
         <div class="row">
             <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Zabierzów
+                <input class="form-check-input" type="radio" value="">
+                PRZEWÓZ ROWERU
             </div>
             <div class="col">
-
+                7.00 PLN
             </div>
         </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Krzeszowice
-            </div>
-            <div class="col">
 
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Trzebinia
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Jaworzno
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Mysłowice
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Katowice
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
 
     </div>
-    <div class="ticket_main_info_from_to">
-        <p class="font-weight-bold">Katowice</p>
-        <p class="text-right">Przyjazd: <strong>11:27</strong></p>
-    </div>
+
 </div>
 
 <div id="icons_bottom" class="d-flex justify-content-around">
     <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="blue" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
         <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
     </svg>
-    <a href="#" class="btn btn-primary btn-lg active" role="button" >Śledź</a>
-    <a href="#" class="btn btn-primary btn-lg active" role="button" >Kup bilet</a>
+    <a href="#" class="btn btn-primary btn-lg active" role="button" >Dalej</a>
 </div>
 
 <script>
