--- a/fillTicketData.html
+++ b/fillTicketData.html
@@ -53,29 +53,25 @@
         }
         #ticket_main_info {
             min-height: 500px;
-            border: 1px solid blue;
-            border-radius: 15px;
-            background-color: white;
             margin: 20px;
             padding: 20px;
             display: block;
         }
         #ticket_main_info p {
-            width: 145px;
-            float: left;
+            padding: 0;
+            margin: 0;
         }
-        .ticket_main_info_from_to {
-            min-height: 50px;
+        #info_panel_top {
+            font-size: 20px;
+            font-weight: bold;
+            padding-bottom: 20px;
         }
-        .ticket_main_info_road {
-            min-height: 350px;
-            display: block;
+        #ulga {
             padding: 0;
         }
-        .row {
-            min-height:40px;
+        #user_data {
+            padding-top: 20px;
         }
-
 
     </style>
 
@@ -104,7 +100,6 @@
                 <li><a href="#">Moje bilety</a></li>
                 <li><a href="#">Moje dane</a></li>
                 <li><a href="#">Wyloguj</a></li>
-
             </ul>
         </div>
     </div>
@@ -118,104 +113,46 @@
     </div>
 </nav>
 <div id="ticket_main_info" class="align-self-center">
-    <div class="ticket_main_info_from_to">
-        <p class="font-weight-bold">Kraków Główny</p>
-        <p class="text-right">Odjazd: <strong>10:00</strong></p>
-    </div>
-    <div class="ticket_main_info_road container">
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                    <circle cx="8" cy="8" r="8"/>
-                </svg>
-                Kraków Główny
-            </div>
-            <div class="col">
-                Inne
-            </div>
+    <div>
+        <div id="info_panel_top">
+            <p><small>No to zaczynamy!</small></p>
+            <p>Podaj dane pasażera</p>
         </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Kraków Bronowice
+        <form>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck">
+                <label class="form-check-label" for="defaultCheck">
+                    <p>Ja będe podróżował</p>
+                </label>
             </div>
-            <div class="col">
-
+            <div id="user_data">
+                <div class="form-check">
+                    <label class="form-check-label" >
+                        <p>Imie i nazwisko</p>
+                    </label>
+                </div>
+                <div class="form-group">
+                    <input type="name" class="form-control" id="exampleInputName1" placeholder="Imie">
+                </div>
+                <div class="form-group">
+                    <input type="surname" class="form-control" id="exampleInputSurname" placeholder="Nazwisko">
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Zabierzów
+            <div class="form-check">
+                <label class="form-check-label" >
+                    <p>Ulga</p>
+                </label>
             </div>
-            <div class="col">
-
+            <div class="form-check" id="ulga">
+                <select class="custom-select">
+                    <option selected>Wybierz ulgę</option>
+                    <option value="1">Studencka -51%</option>
+                    <option value="2">Młodzieżowa -30%</option>
+                    <option value="3">Seniorska -70%</option>
+                    <option value="4">Ujotowska -99%</option>
+                </select>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Krzeszowice
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Trzebinia
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Jaworzno
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Mysłowice
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="lightgreen" class="bi bi-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                </svg>
-                Katowice
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-
-    </div>
-    <div class="ticket_main_info_from_to">
-        <p class="font-weight-bold">Katowice</p>
-        <p class="text-right">Przyjazd: <strong>11:27</strong></p>
+        </form>
     </div>
 </div>
 
@@ -223,8 +160,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="blue" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
         <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
     </svg>
-    <a href="#" class="btn btn-primary btn-lg active" role="button" >Śledź</a>
-    <a href="#" class="btn btn-primary btn-lg active" role="button" >Kup bilet</a>
+    <a href="#" class="btn btn-primary btn-lg active" role="button" >Dalej</a>
 </div>
 
 <script>
