--- a/register.html
+++ b/register.html
@@ -122,7 +122,7 @@
             </label>
         </div>
         <div id="register_bottom">
-            <a href="#" class="btn btn-primary btn-lg active btn-block" role="button" >Zarejestruj się</a>
+            <a href="fillTicketData.html" class="btn btn-primary btn-lg active btn-block" role="button" >Zarejestruj się</a>
         </div>
     </form>
 </div>
