--- a/logIn.html
+++ b/logIn.html
@@ -101,12 +101,12 @@
         <div class="form-group">
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="blue" class="bi bi-arrow-right-circle-fill float-right" viewBox="0 0 16 16">
+        <a href="fillTicketData.html"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="blue" class="bi bi-arrow-right-circle-fill float-right" viewBox="0 0 16 16">
             <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
-        </svg>
+        </svg></a>
         <div id="register_bottom">
             <p><small>Nie masz konta?</small></p>
-            <a href="#" class="btn btn-primary btn-lg active btn-block" role="button" >Zarejestruj się</a>
+            <a href="register.html" class="btn btn-primary btn-lg active btn-block" role="button" >Zarejestruj się</a>
         </div>
     </form>
 </div>
