--- a/ticketBought.html
+++ b/ticketBought.html
@@ -99,7 +99,9 @@
         #train_info_top p {
             margin: 2px;
             font-size: 25px;
-
+        }
+        #train_info_top svg {
+            margin-right: 20px;
         }
         #ok_icon {
             text-align: center;
@@ -161,6 +163,10 @@
 
     <div id="train_info_top" >
         <small>Przyjemnej podróży!</small>
+        <a href="home.html"> <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-x-circle float-right" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+        </svg></a>
         <p class="font-weight-bold">To wszystko!</p>
     </div>
 
