--- a/chooseOffer.html
+++ b/chooseOffer.html
@@ -130,11 +130,11 @@
                 </div>
                 <ul class="font-weight-bold mt-3">
                     <li><a href="#">Aktualności</a></li>
-                    <li><a href="edit_profile.html">Szukaj połączenia</a></li>
+                    <li><a href="search_connection_form.html">Szukaj połączenia</a></li>
                     <li><a href="#">Mapa</a></li>
                     <li><a href="#">Przeglądaj rozkład</a></li>
                     <li><a href="#">Moje bilety</a></li>
-                    <li><a href="search_connection_form.html">Moje dane</a></li>
+                    <li><a href="edit_profile.html">Moje dane</a></li>
                     <li><a href="#">Wyloguj</a></li>
 
                 </ul>
